<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings"
    android:background="@color/primary_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title"
                    android:fontFamily="@font/cairo_bold"
                    android:textSize="35sp"
                    android:textAlignment="center"
                    android:textColor="@color/card_color">

                </TextView>

            </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="10dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_info_24"
                app:tint="@color/text_color">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about_title"
                android:fontFamily="@font/cairo_regular"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:layout_marginBottom="10dp">

            </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="10dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_star_rate_24"
                    app:tint="@color/text_color">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rate_us_title"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="10dp">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="10dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_monetization_on_24"
                    app:tint="@color/text_color">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/premium_title"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="10dp">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_color"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            app:cardElevation="10dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_calculate_24"
                    app:tint="@color/text_color">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/other_apps_title"
                    android:fontFamily="@font/cairo_regular"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color"
                    android:layout_marginBottom="10dp">

                </TextView>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/contact_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardElevation="10dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_email_24"
                        app:tint="@color/text_color">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/contact_title"
                        android:fontFamily="@font/cairo_regular"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:layout_marginBottom="10dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_baseline_home_24"
                app:tint="@color/text_color">

            </ImageView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/share_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/card_color"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="10dp"
                app:cardElevation="10dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_share_24"
                        app:tint="@color/text_color">

                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/share_title"
                        android:fontFamily="@font/cairo_regular"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/text_color"
                        android:layout_marginBottom="10dp">

                    </TextView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>